refactor: around POIGroup